mejoras en el codigo en general, casi terminado

--- a/calcular_dia.html
+++ b/calcular_dia.html
@@ -160,6 +160,7 @@
             <button class="secondary" onclick="clearSelectedDatesAndCloseModal()">Limpiar Selección y Cerrar</button>
         </div>
     </div>
+    <script src="utils.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
