--- a/calculo_hora.html
+++ b/calculo_hora.html
@@ -231,6 +231,16 @@
                 <input type="hidden" id="presentismo" value="0.20">
             </div>
 
+            <!-- BONO -->
+            <div class="form-row bono-row">
+                <label class="form-label">Bono ($210.000)</label>
+                <div class="button-group" id="bono-group">
+                    <button type="button" class="bono-btn" data-value="0">No</button>
+                    <button type="button" class="bono-btn" data-value="210000">Sí</button>
+                </div>
+                <input type="hidden" id="bono" value="0">
+            </div>
+
             <!-- RESULTADO -->
             <div id="resultado-hora" class="resultado-display"></div>
             <div id="desglose-hora" class="desglose-display"></div>
