--- a/calculadora_adicional.html
+++ b/calculadora_adicional.html
@@ -88,7 +88,7 @@
         <nav class="main-nav">
             <a href="index.html" class="nav-link nav-logo">Inicio</a>
             <a href="calculo_hora.html" class="nav-link">Calcular por hora</a>
-            <a href="index.html" class="nav-link">Calcular por día</a>
+            <a href="calcular_calendario.html" class="nav-link">Calcular calendario</a>
             <a href="calculadora_adicional.html" class="nav-link active">Adic. sobre básico</a>
         </nav>
     </header>
