--- a/calcular_dia.html
+++ b/calcular_dia.html
@@ -13,6 +13,7 @@
             <a href="index.html" class="nav-link nav-logo">Inicio</a>
             <a href="calculo_hora.html" class="nav-link">Calcular por hora</a>
             <a href="calcular_dia.html" class="nav-link active">Calcular por día</a>
+            <a href="calcular_calendario.html" class="nav-link">Calcular calendario</a>
         </nav>
     </header>
     <div class="container animated-fadein">
@@ -100,10 +101,13 @@
                 <button onclick="registerExtraHours()">Confirmar Extras</button>
             </div>
         </div>
+
         <div id="quincena-display">
             <p>Calculando salario de quincena...</p>
         </div>
         <p id="result"></p>
+        <button id="toggle-details-btn" onclick="toggleCalculationDetails()" style="display:none; margin: 10px 0;">Mostrar Detalles</button>
+        <div id="calculation-details" style="display:none; background: #f5f5f5; padding: 15px; border-radius: 8px; margin: 10px 0; font-family: monospace;"></div>
         <div id="history">
             <h2>Historial de Registros</h2>
             <ul id="history-list"></ul>
