--- a/calculo_hora.html
+++ b/calculo_hora.html
@@ -12,7 +12,7 @@
         <nav class="main-nav">
             <a href="index.html" class="nav-link nav-logo">Inicio</a>
             <a href="calculo_hora.html" class="nav-link active">Calcular por hora</a>
-            <a href="calcular_dia.html" class="nav-link">Calcular por día</a>
+            <a href="calcular_calendario.html" class="nav-link">Calcular calendario</a>
             <a href="calculadora_adicional.html" class="nav-link">Adic. sobre básico</a>
         </nav>
     </header>
