--- a/calculadora_adicional.html
+++ b/calculadora_adicional.html
@@ -89,7 +89,8 @@
             <a href="index.html" class="nav-link nav-logo">Inicio</a>
             <a href="calculo_hora.html" class="nav-link">Calcular por hora</a>
             <a href="calcular_calendario.html" class="nav-link">Calcular calendario</a>
-            <a href="calculadora_adicional.html" class="nav-link active">Adic. sobre básico</a>
+            <a href="calculadora_adicional.html" class="nav-link active">Adicional sobre básico</a>
+            <a href="analizar_recibo.html" class="nav-link">Analizador de recibos</a>
         </nav>
     </header>
     <div class="calc-container animated-fadein">
