--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <nav class="main-nav">
             <a href="index.html" class="nav-link nav-logo active">Inicio</a>
             <a href="calculo_hora.html" class="nav-link">Calcular por hora</a>
-            <a href="calcular_dia.html" class="nav-link">Calcular por día</a>
             <a href="calcular_calendario.html" class="nav-link">Calcular calendario</a>
+            <a href="calculadora_adicional.html" class="nav-link">Adicional sobre básico</a>
+            <a href="analizar_recibo.html" class="nav-link">Analizador de recibos</a>
         </nav>
     </header>
     <!-- CONTENIDO PRINCIPAL -->
@@ -67,6 +68,20 @@
                 <h3>Adicional sobre Básico</h3>
                 <p>Calcula el porcentaje de adicional sobre el sueldo básico.</p>
                 <a href="calculadora_adicional.html" class="feature-link">Ir a Calculadora</a>
+            </div>
+            
+            <div class="feature-card">
+                <div class="feature-icon">
+                    <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#9c27b0" stroke-width="2">
+                        <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                        <polyline points="14,2 14,8 20,8"/>
+                        <line x1="16" y1="13" x2="8" y2="13"/>
+                        <line x1="16" y1="17" x2="8" y2="17"/>
+                    </svg>
+                </div>
+                <h3>Analizador de Recibos</h3>
+                <p>Sube una imagen de tu recibo y extrae automáticamente los datos.</p>
+                <a href="analizar_recibo.html" class="feature-link">Analizar Recibo</a>
             </div>
         </div>
         
