--- a/calculadora_adicional.html
+++ b/calculadora_adicional.html
@@ -205,3 +205,9 @@
         window.addEventListener('DOMContentLoaded', calcularAdicionalAuto);
         </script>
     </div>
+    
+    <footer class="main-footer">
+        <a href="../index.html" class="footer-link">
+            🏠 Volver a Utilidades Principal
+        </a>
+    </footer>
