--- a/calculo_hora.html
+++ b/calculo_hora.html
@@ -333,5 +333,11 @@
             observer.observe(row);
         });
     </script>
+    
+    <footer class="main-footer">
+        <a href="../index.html" class="footer-link">
+            🏠 Volver a Utilidades Principal
+        </a>
+    </footer>
 </body>
 </html>
