Add buttons for additional months in calculo_hora.html

--- a/calculo_hora.html
+++ b/calculo_hora.html
@@ -44,12 +44,16 @@
             <div class="form-row">
                 <label class="form-label">Mes</label>
                 <div class="button-group" id="mes-group">
-                    <button type="button" class="mes-btn" data-value="junio">Jun</button>
-                    <button type="button" class="mes-btn" data-value="julio">Jul</button>
-                    <button type="button" class="mes-btn" data-value="agosto">Ago</button>
-                    <button type="button" class="mes-btn" data-value="septiembre">Sep</button>
-                    <button type="button" class="mes-btn" data-value="octubre">Oct</button>
-                    <button type="button" class="mes-btn" data-value="noviembre">Nov</button>
+                    <button type="button" class="mes-btn" data-value="junio25">Jun</button>
+                    <button type="button" class="mes-btn" data-value="julio25">Jul</button>
+                    <button type="button" class="mes-btn" data-value="agosto25">Ago</button>
+                    <button type="button" class="mes-btn" data-value="septiembre25">Sep</button>
+                    <button type="button" class="mes-btn" data-value="octubre25">Oct</button>
+                    <button type="button" class="mes-btn" data-value="noviembre25">Nov</button>
+                    <button type="button" class="mes-btn" data-value="diciembre25">Dic</button>
+                    <button type="button" class="mes-btn" data-value="enero26">Ene</button>
+                    <button type="button" class="mes-btn" data-value="febrero26">Feb</button>
+                    <button type="button" class="mes-btn" data-value="marzo">Mar</button>
                 </div>
                 <input type="hidden" id="mes" value="">
             </div>
