--- a/calculo_hora.html
+++ b/calculo_hora.html
@@ -52,8 +52,8 @@
                     <button type="button" class="mes-btn" data-value="noviembre25">Nov</button>
                     <button type="button" class="mes-btn" data-value="diciembre25">Dic</button>
                     <button type="button" class="mes-btn" data-value="enero26">Ene</button>
-                    <button type="button" class="mes-btn" data-value="febrero26">Feb</button>
-                    <button type="button" class="mes-btn" data-value="marzo">Mar</button>
+                    <button type="button" class="mes-btn" data-value="enero26">Feb</button>
+                    <button type="button" class="mes-btn" data-value="marzo26">Mar</button>
                 </div>
                 <input type="hidden" id="mes" value="">
             </div>
