--- a/calculadora_adicional.html
+++ b/calculadora_adicional.html
@@ -206,7 +206,5 @@
     </div>
     
     <footer class="main-footer">
-        <a href="../index.html" class="footer-link">
-            🏠 Volver a Utilidades Principal
-        </a>
+        <a href="../index.html" class="footer-link">Volver a Utilidades Principal</a>
     </footer>
