--- a/calcular_calendario.html
+++ b/calcular_calendario.html
@@ -149,9 +149,7 @@
     <script src="script_calendario.js"></script>
     
     <footer class="main-footer">
-        <a href="../index.html" class="footer-link">
-            🏠 Volver a Utilidades Principal
-        </a>
+        <a href="../index.html" class="footer-link">Volver a Utilidades Principal</a>
     </footer>
 </body>
 </html>
