--- a/calculo_hora.html
+++ b/calculo_hora.html
@@ -104,11 +104,7 @@
             <div class="horas-section">
                 <h3 class="section-title">Horas Trabajadas
                     <span class="tooltip-trigger" tabindex="0">
-                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#f9a825" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <circle cx="12" cy="12" r="10"/>
-                            <line x1="12" y1="16" x2="12" y2="12"/>
-                            <line x1="12" y1="8" x2="12.01" y2="8"/>
-                        </svg>
+                        <span class="help-dot" tabindex="0">?</span>
                         <span class="tooltip" id="tooltip-turnos">
                             <b>(Mañana):</b><br>
                             Lunes a Viernes: 8 hs normales.<br>
@@ -140,25 +136,14 @@
                     <label class="form-label adicional-label">
                         Adicional sobre básico (%)
                         <span class="tooltip-trigger" tabindex="0">
-                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#f9a825" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <circle cx="12" cy="12" r="10"/>
-                                <line x1="12" y1="16" x2="12" y2="12"/>
-                                <line x1="12" y1="8" x2="12.01" y2="8"/>
-                            </svg>
+                            <span class="help-dot" tabindex="0">?</span>
                             <span class="tooltip" id="tooltip-adic">
                                 Ingresá el porcentaje de adicional sobre el básico que corresponde.<br><br>
                                 El adicional se calcula como ese porcentaje aplicado a la suma de horas normales y horas nocturnas.<br><br>
                                 <b>adicional = (horas normales + horas nocturnas) × (porcentaje / 100)</b>
                             </span>
                         </span>
-                        <a href="calculadora_adicional.html" class="calc-link" title="Ir a calculadora de adicional sobre básico" tabindex="0">
-                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#f9a825" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
-                                <rect x="3" y="3" width="18" height="18" rx="3"/>
-                                <rect x="7" y="7" width="10" height="3" rx="1.5"/>
-                                <rect x="7" y="14" width="3" height="3" rx="1.5"/>
-                                <rect x="14" y="14" width="3" height="3" rx="1.5"/>
-                            </svg>
-                        </a>
+                        <a href="calculadora_adicional.html" class="calc-link" title="Ir a calculadora de adicional sobre básico" tabindex="0">Abrir</a>
                     </label>
                     <input type="number" id="adicional-basico" class="adicional-input" min="0" max="100" step="0.01" value="0" placeholder="Ej: 20">
                 </div>
@@ -168,11 +153,7 @@
                     <label class="form-label sabado-label">
                         Horas 100% (sábado)
                         <span class="tooltip-trigger" tabindex="0">
-                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#f9a825" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <circle cx="12" cy="12" r="10"/>
-                                <line x1="12" y1="16" x2="12" y2="12"/>
-                                <line x1="12" y1="8" x2="12.01" y2="8"/>
-                            </svg>
+                            <span class="help-dot" tabindex="0">?</span>
                             <span class="tooltip" id="tooltip-sabado">
                                 Sábados TM 7h normales + 1h 100%<br>
                                 Ingresá aquí las horas trabajadas al 100% los sábados.
@@ -193,11 +174,7 @@
                     <label class="form-label sabado-label">
                         Horas nocturnas (50%)
                         <span class="tooltip-trigger" tabindex="0">
-                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#f9a825" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <circle cx="12" cy="12" r="10"/>
-                                <line x1="12" y1="16" x2="12" y2="12"/>
-                                <line x1="12" y1="8" x2="12.01" y2="8"/>
-                            </svg>
+                            <span class="help-dot" tabindex="0">?</span>
                             <span class="tooltip" id="tooltip-nocturnas-50">
                                 De lunes a viernes 7h noc + 1h al 50%<br>
                                 Ingresá aquí las horas nocturnas con recargo del 50%.
@@ -338,9 +315,7 @@
     </script>
     
     <footer class="main-footer">
-        <a href="../index.html" class="footer-link">
-            🏠 Volver a Utilidades Principal
-        </a>
+        <a href="../index.html" class="footer-link">Volver a Utilidades Principal</a>
     </footer>
 </body>
 </html>
