--- a/index.html
+++ b/index.html
@@ -25,41 +25,18 @@
 
         <div class="features-grid">
             <div class="feature-card">
-                <div class="feature-icon">
-                    <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#1976d2" stroke-width="2">
-                        <circle cx="12" cy="12" r="10"/>
-                        <polyline points="12,6 12,12 16,14"/>
-                    </svg>
-                </div>
                 <h3>Cálculo por Hora</h3>
                 <p>Calcula tu salario basado en horas trabajadas, categoría y antigüedad.</p>
                 <a href="calculo_hora.html" class="feature-link">Ir a Cálculo por Hora</a>
             </div>
 
             <div class="feature-card">
-                <div class="feature-icon">
-                    <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#388e3c" stroke-width="2">
-                        <rect x="3" y="4" width="18" height="18" rx="2" ry="2"/>
-                        <line x1="16" y1="2" x2="16" y2="6"/>
-                        <line x1="8" y1="2" x2="8" y2="6"/>
-                        <line x1="3" y1="10" x2="21" y2="10"/>
-                        <path d="m9 16 2 2 4-4"/>
-                    </svg>
-                </div>
                 <h3>Cálculo por Calendario</h3>
                 <p>Selecciona múltiples días y calcula automáticamente según turno.</p>
                 <a href="calcular_calendario.html" class="feature-link">Ir a Calendario</a>
             </div>
 
             <div class="feature-card">
-                <div class="feature-icon">
-                    <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#f9a825" stroke-width="2">
-                        <rect x="3" y="3" width="18" height="18" rx="3"/>
-                        <rect x="7" y="7" width="10" height="3" rx="1.5"/>
-                        <rect x="7" y="14" width="3" height="3" rx="1.5"/>
-                        <rect x="14" y="14" width="3" height="3" rx="1.5"/>
-                    </svg>
-                </div>
                 <h3>Adicional sobre Básico</h3>
                 <p>Calcula el porcentaje de adicional sobre el sueldo básico.</p>
                 <a href="calculadora_adicional.html" class="feature-link">Ir a Calculadora</a>
@@ -71,9 +48,7 @@
 
     </div>
     <footer class="main-footer">
-        <a href="../index.html" class="footer-link">
-            🏠 Volver a Utilidades Principal
-        </a>
+        <a href="../index.html" class="footer-link">Volver a Utilidades Principal</a>
     </footer>
 
     <script src="utils.js"></script>
