--- a/calcular_calendario.html
+++ b/calcular_calendario.html
@@ -114,6 +114,16 @@
                     <option value="0">0%</option>
                 </select>
             </div>
+
+            <!-- BONO -->
+            <div class="form-group">
+                <label>Bono</label>
+                <div class="button-group" id="bono-group">
+                    <button type="button" class="bono-btn" data-value="0">No</button>
+                    <button type="button" class="bono-btn" data-value="210000">Sí</button>
+                </div>
+                <input type="hidden" id="bono" value="0">
+            </div> 
         </div>
 
         <!-- Calendario -->
