--- a/calcular_calendario.html
+++ b/calcular_calendario.html
@@ -68,8 +68,8 @@
                 <h4 style="margin: 0 0 8px 0; color: #2e7d32;">Valores Seleccionados:</h4>
                 <div id="values-display" style="font-size: 0.9em; line-height: 1.4;"></div>
             </div>
-            <div class="form-group">
-                <label>Categoría:</label>
+            <div class="form-group form-row-inline">
+                <label for="categoria-select">Categoría:</label>
                 <select id="categoria-select">
                     <option value="">Selecciona categoría</option>
                     <option value="A">A</option>
@@ -82,18 +82,18 @@
                     <option value="H">H</option>
                 </select>
             </div>
-            <div class="form-group">
-                <label>Antigüedad:</label>
+            <div class="form-group form-row-inline">
+                <label for="antiguedad-select">Antigüedad:</label>
                 <select id="antiguedad-select">
                     <option value="">Selecciona antigüedad</option>
                 </select>
             </div>
-            <div class="form-group">
-                <label>Adicional sobre básico (%):</label>
+            <div class="form-group form-row-inline">
+                <label for="adicional-input">Adicional sobre básico (%):</label>
                 <input type="number" id="adicional-input" min="0" max="100" step="0.1" value="0">
             </div>
-            <div class="form-group">
-                <label>Turno:</label>
+            <div class="form-group form-row-inline">
+                <label for="turno-select">Turno:</label>
                 <select id="turno-select">
                     <option value="">Selecciona turno</option>
                     <option value="manana">Mañana</option>
@@ -101,12 +101,12 @@
                     <option value="noche">Noche</option>
                 </select>
             </div>
-            <div class="form-group">
-                <label>Horas extras por día:</label>
+            <div class="form-group form-row-inline">
+                <label for="extras-input">Horas extras por día:</label>
                 <input type="number" id="extras-input" min="0" max="16" value="0">
             </div>
-            <div class="form-group">
-                <label>Presentismo (%):</label>
+            <div class="form-group form-row-inline">
+                <label for="presentismo-select">Presentismo (%):</label>
                 <select id="presentismo-select">
                     <option value="0.20">20%</option>
                     <option value="0.14">14%</option>
@@ -116,7 +116,7 @@
             </div>
 
             <!-- BONO -->
-            <div class="form-group">
+            <div class="form-group form-row-inline">
                 <label>Bono</label>
                 <div class="button-group" id="bono-group">
                     <button type="button" class="bono-btn" data-value="0">No</button>
