--- a/index.html
+++ b/index.html
@@ -3,52 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Control de Asistencia y Salario</title>
+    <title>Control de Asistencia y Salario - Sistema Integrado</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="main-header animated-fadein">
         <nav class="main-nav">
-            <a href="index.html" class="nav-link nav-logo active">Inicio</a>
-            <a href="calculo_hora.html" class="nav-link">Calcular por hora</a>
-            <a href="calcular_calendario.html" class="nav-link">Calcular calendario</a>
-            <a href="calculadora_adicional.html" class="nav-link">Adicional sobre básico</a>
-
+            <a href="index.html" class="nav-link nav-logo active">🏠 Inicio</a>
+            <a href="calculo_hora.html" class="nav-link">⏰ Calcular por hora</a>
+            <a href="calcular_calendario.html" class="nav-link">📅 Calcular calendario</a>
+            <a href="calculadora_adicional.html" class="nav-link">➕ Adicional sobre básico</a>
         </nav>
     </header>
+    
     <div class="home-container">
         <div class="welcome-section">
             <h1 class="main-title">¡Bienvenido!</h1>
-            <p class="subtitle">Sistema de Cálculo de Sueldos</p>
-            <p class="description">Usa el menú superior para navegar entre las funciones disponibles.</p>
+            <p class="subtitle">Sistema Integral de Cálculo de Sueldos</p>
+            <p class="description">Selecciona una opción para comenzar a calcular tus salarios de forma rápida y sencilla</p>
         </div>
 
         <div class="features-grid">
             <div class="feature-card">
-                <h3>Cálculo por Hora</h3>
-                <p>Calcula tu salario basado en horas trabajadas, categoría y antigüedad.</p>
+                <h3>⏰ Cálculo por Hora</h3>
+                <p>Calcula tu salario basado en horas trabajadas, categoría, antigüedad y presentismo. Sistema completo y detallado.</p>
                 <a href="calculo_hora.html" class="feature-link">Ir a Cálculo por Hora</a>
             </div>
 
             <div class="feature-card">
-                <h3>Cálculo por Calendario</h3>
-                <p>Selecciona múltiples días y calcula automáticamente según turno.</p>
+                <h3>📅 Cálculo por Calendario</h3>
+                <p>Selecciona múltiples días en un calendario interactivo y calcula automáticamente según el turno trabajado.</p>
                 <a href="calcular_calendario.html" class="feature-link">Ir a Calendario</a>
             </div>
 
             <div class="feature-card">
-                <h3>Adicional sobre Básico</h3>
-                <p>Calcula el porcentaje de adicional sobre el sueldo básico.</p>
+                <h3>➕ Adicional sobre Básico</h3>
+                <p>Calcula rápidamente el porcentaje de adicional sobre el sueldo básico con comparativas automáticas.</p>
                 <a href="calculadora_adicional.html" class="feature-link">Ir a Calculadora</a>
             </div>
-
-
         </div>
-
-
     </div>
+    
     <footer class="main-footer">
-        <a href="../index.html" class="footer-link">Volver a Utilidades Principal</a>
+        <a href="../index.html" class="footer-link">← Volver a Utilidades Principal</a>
     </footer>
 
     <script src="utils.js"></script>
