Agregar modo noche (dark mode) con toggle de tema

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <a href="../index.html" class="footer-link">← Volver a Utilidades Principal</a>
     </footer>
 
+    <script src="theme-switcher.js"></script>
     <script src="utils.js"></script>
     <script src="script.js"></script>
 </body>
