--- a/calculadora_adicional.html
+++ b/calculadora_adicional.html
@@ -237,6 +237,9 @@
         </script>
     </div>
     
+    <script src="theme-switcher.js"></script>
     <footer class="main-footer">
         <a href="../index.html" class="footer-link">Volver a Utilidades Principal</a>
     </footer>
+</body>
+</html>
