--- a/calcular_calendario.html
+++ b/calcular_calendario.html
@@ -117,6 +117,7 @@
 
     <script src="utils.js"></script>
     <script src="script_calendario.js"></script>
+    <script src="theme-switcher.js"></script>
     
     <footer class="main-footer">
         <a href="../index.html" class="footer-link">Volver a Utilidades Principal</a>
