--- a/calculo_hora.html
+++ b/calculo_hora.html
@@ -314,6 +314,7 @@
         });
     </script>
     
+    <script src="theme-switcher.js"></script>
     <footer class="main-footer">
         <a href="../index.html" class="footer-link">Volver a Utilidades Principal</a>
     </footer>
